# aigc

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CLEANUP_PLAN.md  README.md  make_admin.py
.claude/skills/docs-management/: DEPENDENCIES.md  DOCX_PDF_SUPPORT.md  RUN_TESTS.md  SKILL.md  official_docs_api.py  pyproject.toml  requirements.txt
.claude/skills/docs-management/canonical/: index.json  index.yaml
.claude/skills/docs-management/canonical/anthropic-com/engineering/: a-postmortem-of-three-recent-issues.md  advanced-tool-use.md  building-agents-with-the-claude-agent-sdk.md  claude-code-sandboxing.md  code-execution-with-mcp.md  desktop-extensions.md  effective-context-engineering-for-ai-agents.md  effective-harnesses-for-long-running-agents.md  equipping-agents-for-the-real-world-with-agent-skills.md  multi-agent-research-system.md  writing-tools-for-agents.md
.claude/skills/docs-management/canonical/modelcontextprotocol-io/: clients.md
.claude/skills/docs-management/config/: __init__.py  config_registry.py  content_filtering.yaml  defaults.yaml  filtering.yaml  runtime.yaml  tag_detection.yaml
.claude/skills/docs-management/references/: api-reference.md  audit-principles.md  best-practices.md  configuration-guide.md  configuration.md  content-filtering.md  dependencies.md  parallelization-strategy.md  platform-requirements.md  plugin-maintenance.md  sources.json  sources.json.example  spacy-installation.md  technical-details.md  troubleshooting.md  workflows.md
.claude/skills/docs-management/references/architecture/: type-b-pattern.md
.claude/skills/docs-management/references/capabilities/: change-detection-guide.md  discovery-guide.md  extraction-guide.md  index-management-guide.md  scraping-guide.md
.claude/skills/docs-management/scripts/: __init__.py  bootstrap.py
.claude/skills/docs-management/scripts/core/: doc_resolver.py  docs_map_parser.py  enrich_categories.py  find_docs.py  get_subsection_content.py  llms_parser.py  scrape_docs.py
.claude/skills/docs-management/scripts/maintenance/: audit_performance.py  cleanup_drift.py  cleanup_logs.py  cleanup_old_anthropic_docs.py  cleanup_scrape.py  cleanup_stale.py  clear_cache.py  detect_changes.py  discover_categories.py
.claude/skills/docs-management/scripts/management/: extract_metadata.py  rebuild_index.py
.claude/skills/docs-management/scripts/setup/: setup_dependencies.py
.claude/skills/docs-management/scripts/utils/: config_helpers.py  dev_mode.py  file_parser.py  http_utils.py
.claude/skills/docs-management/scripts/validation/: __init__.py  analyze_search_audit.py  audit_tag_config.py  quick_validate.py  run_search_audit.py  validate_filtering.py  validate_scraped_docs.py
.claude/skills/docs-management/tests/: __init__.py  conftest.py
.claude/skills/docs-management/tests/core/: __init__.py  test_claude_docs_api.py  test_doc_resolver.py  test_docs_map_parser.py  test_enrich_categories.py  test_find_docs.py  test_get_subsection_content.py  test_hybrid_reminder.py  test_scrape_all_sources.py  test_scrape_docs.py
.claude/skills/docs-management/tests/integration/: test_domain_weighting.py  test_drift_detection.py  test_hooks_search_quality.py  test_integration.py  test_search_audit_fixes.py  test_search_limits.py  test_search_quality.py  test_search_relevance_regression.py
.claude/skills/docs-management/tests/maintenance/: __init__.py  test_cleanup_drift.py  test_cleanup_old_anthropic_docs.py  test_cleanup_scrape.py  test_cleanup_stale.py  test_detect_changes.py  test_discover_categories.py
.claude/skills/docs-management/tests/management/: __init__.py  test_extract_metadata.py  test_extract_subsection.py  test_index_manager.py  test_manage_index.py  test_metadata_extraction_quality.py  test_rebuild_index.py  test_refresh_index.py
.claude/skills/docs-management/tests/setup/: __init__.py  test_check_dependencies.py
.claude/skills/docs-management/tests/shared/: README.md  SCRIPT_TEST_MAPPING.md  __init__.py  conftest.py  constants.py  requirements-test.txt  test_utils.py
.claude/skills/docs-management/tests/utils/: __init__.py  test_bootstrap.py  test_cache_manager.py  test_cleanup_utils.py  test_cli_utils.py  test_common_paths.py  test_config_helpers.py  test_config_loader.py  test_config_registry.py  test_content_filter.py  test_dev_mode.py  test_http_utils.py  test_logging_timing.py  test_logging_utils.py  test_path_config.py  test_publication_utils.py  test_script_utils.py
.claude/skills/docs-management/tests/validation/: __init__.py  test_quick_validate.py  test_search_validation.py  test_validate_index_vs_docs.py  test_validate_scraped_docs.py  test_verify_index.py
(+993 files in other folders)
